add tests for rest api add rest api

--- a/app/client/scrumboard.jade
+++ b/app/client/scrumboard.jade
@@ -17,7 +17,7 @@ template(name="scrumboard_column")
 
 template(name="scrumboard_create")
 	h3 Create Card
-	+quickForm(collection="Cards" class="form-create-card" type="insert")
+	+quickForm(collection="Cards" id="form-create-card" type="insert")
 
 template(name="scrumboard_cards")
 	ul.cards
