--- a/app/client/scrumboard.styl
+++ b/app/client/scrumboard.styl
@@ -13,6 +13,12 @@
 			cursor: -moz-grab;
 			cursor: -webkit-grab;
 			cursor: grab;
+			.tools
+				overflow: auto
+				button
+					margin-right: 5px
+					display:block
+					float: left;
 			
 	.column
 		min-height: 800px
