add markdown-support in description add some stylefixes

--- a/app/client/scrumboard.styl
+++ b/app/client/scrumboard.styl
@@ -4,15 +4,28 @@
 		margin: 0
 		padding: 0
 		.card
-			background-color: #eee;
+			background-color: #efefef;
 			padding: 8px
-			border-radius: 8px
+			border-radius: 11px
 			border: 1px dashed #666
 			margin-bottom: 8px
 			cursor: move;
 			cursor: -moz-grab;
 			cursor: -webkit-grab;
 			cursor: grab;
+			.header
+				.title
+					margin-top: 0px
+				.estimate
+					font-size: 15px
+					float: right
+					font-weight: bold
+					display: block
+					border-radius: 11px
+				border-bottom: 1px dashed #999
+				margin-bottom: 10px
+				
+				
 			.tools
 				overflow: auto
 				button
