--- a/app/client/scrumboard.styl
+++ b/app/client/scrumboard.styl
@@ -24,7 +24,10 @@
 					border-radius: 11px
 				border-bottom: 1px dashed #999
 				margin-bottom: 10px
-				
+			.description
+				border-bottom: 1px dashed #999
+				padding-bottom: 10px
+				margin-bottom: 10px
 				
 			.tools
 				overflow: auto
