--- a/app/client/scrumboard_cards_card.jade
+++ b/app/client/scrumboard_cards_card.jade
@@ -11,7 +11,9 @@ template(name="scrumboard_cards_card")
 			.description
 				+markdown
 					#{description}
-			p.responsible=responsible
+			p
+				| Responsible: 
+				span.responsible=responsible
 			.tools
 				button.btn.btn-delete.btn-danger 
 					i.glyphicon.glyphicon-trash
